--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 UseAudioMixer=True
 
 [/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 
 r.GenerateMeshDistanceFields=True
 
@@ -17,6 +17,11 @@ r.Shadow.Virtual.Enable=1
 r.SkinCache.CompileShaders=True
 
 r.RayTracing=True
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+r.AntiAliasingMethod=0
+r.MSAACount=1
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
