--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -49,3 +49,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
+EditorStartupMap=/Game/Levels/PlayGround.PlayGround
+GameDefaultMap=/Game/Levels/PlayGround.PlayGround
+
