Half Life-1 Test assets

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=343702764FFA1FA55363FA811F9967E9
+
+[/Script/HammUEr.HammUErDeveloperSettings]
+LocalConversionRate=50.000000
+
