New Jump Height, Walk Speed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -54,3 +54,6 @@ GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 EditorStartupMap=/Game/Levels/PlayGround.PlayGround
 GameDefaultMap=/Game/Levels/PlayGround.PlayGround
 
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-1143.000000
+
