--- a/Config/hammUErPlugin.cfg
+++ b/Config/hammUErPlugin.cfg
@@ -1,4 +1,4 @@
-hammUErDirectory,../../../../../../Users/GameHub/Downloads/Half-Life-1-RMF--master/Half-Life-1-RMF--master/Half-Life/SP
+hammUErDirectory,../../../../../../Users/GameHub/Downloads/HL2Leak-VMFs-master/HL2Leak-VMFs-master/HL2-MapPack
 hammUErDebugMaterials,1
 hammUErWriteMatList,0
 hammUErVTFExportDir,
@@ -149,3 +149,19 @@ POSTER15,512,512,0,
 PICTURE4,512,512,0,
 PICTURE5,512,512,0,
 GLASS_MED,512,512,0,
+CONCRETE/CONCRETEWALL026H,512,512,0,
+METAL/METALDOOR053A,512,512,0,
+CONCRETE/CONCRETEWALL037D,512,512,0,
+CONCRETE/CONCRETEWALL041B,512,512,0,
+BRICK/BRICKWALL052D,512,512,0,
+CONCRETE/CONCRETEWALL047A,512,512,0,
+CONCRETE/CONCRETEWALL041A,512,512,0,
+BRICK/BRICKWALL052E,512,512,0,
+TOOLS/TOOLSNODRAW,512,512,1,
+CONCRETE/CONCRETEWALL041C,512,512,0,
+CONCRETE/CONCRETEFLOOR013A,512,512,0,
+PLASTER/PLASTERCEILING007A,512,512,0,
+DEV/DEV_MEASUREWALL01C,512,512,0,
+DEV/DEV_MEASUREGENERIC01B,512,512,0,
+CONCRETE/CONCRETESTAIR005A,512,512,0,
+BRICK/BRICKFLOOR001A,512,512,0,
