--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,6 +77,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="HorizontalMovement",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="VerticalMovement",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="HorizontalLook",Scale=1.000000,Key=MouseX)
