--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,3 +87,6 @@ MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 DefaultGravityZ=-1143.000000
 
+[/Script/Engine.Engine]
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
+
